--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@ body {
 
 .box {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .esercizio1 {
@@ -16,7 +16,7 @@ body {
 
 .esercizio2 {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     border-radius: 30px;
     margin-top: 10px;
